# proteomle

./: .gitignore  pyproject.toml
app/: main.py
app/static/: app.js  index.html  styles.css
scripts/: build_dpeb_duckdb.py  calibrate_similarity_thresholds.py  compute_top_neighbors.py  download_dpeb_esm.py  enrich_uniprot_metadata.py  export_reviewed_subset.py
worker-app/: README.md  package-lock.json  package.json  tsconfig.json  wrangler.jsonc
worker-app/public/: app.js  index.html  styles.css
worker-app/public/data/: manifest.json  proteins.json
worker-app/public/data/aliases/: 10.json  11.json  12.json  14.json  15.json  17.json  18.json  19.json  1A.json  1C.json  1P.json  1R.json  21.json  23.json  24.json  25.json  26.json  28.json  2A.json  2B.json  2D.json  2H.json  2I.json  2M.json  2O.json  2P.json  32.json  35.json  3B.json  3E.json  3G.json  3H.json  3K.json  3M.json  3O.json  3P.json  3R.json  40.json  43.json  44.json  (+821 more)
worker-app/src/: index.ts  target-pool.generated.ts
worker-app/tools/: build_target_pool.py  export_dataset.py
