[project]
name = "proteomle"
version = "0.1.0"
description = "Protein guessing game dataset prep and app code"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.2.2",
    "fastapi>=0.115.12",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "pyarrow>=19.0.1",
    "requests>=2.32.3",
    "uvicorn>=0.34.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false
